@@ -62,31 +62,12 @@
 #' @importFrom stats AIC var qnorm
 #' @export
 icci <- function(object1, object2, conf.level=.95) {
-  classA <- class(object1)[1L]
-  classB <- class(object2)[1L]
-  
-  if(isS4(object1)){
-    if(classA %in% c("SingleGroupClass", "MultipleGroupClass")){
-      callA <- object1@Call
-      ## recommended vcov type for mirt models:
-      if(object1@Options$SE.type != "Oakes") warning("SE.type='Oakes' is recommended for mirt models")
-    } else {
-      callA <- object1@call
-    }
-  } else {
-    callA <- object1$call
-  }
-  if(isS4(object2)){
-    if(classB %in% c("SingleGroupClass", "MultipleGroupClass")){
-      callB <- object2@Call
-      if(object2@Options$SE.type != "Oakes") warning("SE.type='Oakes' is recommended for mirt models")
-    } else {
-      callB <- object2@call
-    }
-  } else {
-    callB <- object2$call
-  }
 
+  ## check objects, issue warnings/errors, get classes/calls
+  obinfo <- check.obj(object1, object2)
+  callA <- obinfo$callA; classA <- obinfo$classA
+  callB <- obinfo$callB; classB <- obinfo$classB
+  
   llA <- llcont(object1)
   llB <- llcont(object2)
 
