@@ -1,9 +1,14 @@
 Changes in Version 0.5
 
+    o include llcont() method for mirt objects (credit to Lennart Schneider)
+      and find mirt's estfun.AllModelClass()
+
     o lavaan changes: allow for inclusion of completely missing 
       cases and stop if missing = "listwise" or "pairwise"
 
-    o include llcont() method for mirt objects (credit to Lennart Schneider)
+    o return error for lavaan models with fixed.x=TRUE (incorrect results)
+
+    o fix scaling issues in vcov associated with lm/glm/nls
 
 Changes in Version 0.4
 
